--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Giphy Search!</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="button-holder" id="button-holder"></div>
+  <div class="content-container" id="content-container">
+    <div id="gif-holder" class="gif-holder"></div>
+    <div id="search-holder" class="search-holder">
+      <label for="search">Add A State</label>
+      <input type="text" id='search' class='search'>
+      <br>
+      <button>Save State</button>
+    </div>
+  </div>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
