I got the functionality of the website built. The difference is this version doesn't have the static gif. and allow you to click it. This is just the basic version.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <label for="search">Add A State</label>
       <input type="text" id='search' class='search'>
       <br>
-      <button>Save State</button>
+      <button id='saveBtn' class="btn">Save State</button>
     </div>
   </div>
   <script src="assets/js/app.js"></script>
